--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,17 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.springframework.boot' version '2.6.3'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
 allprojects {
     apply plugin : 'eclipse'
     apply plugin : 'idea'
     apply from   : "${rootDir}/dependencies.gradle"
+    apply plugin : 'org.springframework.boot'
+    apply plugin : 'io.spring.dependency-management'
+    apply plugin : 'java-library'
 }
 
 subprojects {
