--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:6666/authdb
+    url: jdbc:postgresql://localhost:6666/authservicedb
     username: postgres
     password: root
   jpa:
@@ -12,3 +12,6 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: true
+
+myapplication:
+  userservice: localhost:8090
