--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:6666/authservicedb
+    url: jdbc:postgresql://192.168.1.35:6666/authservicedb
     username: postgres
     password: root
   jpa:
@@ -14,4 +14,4 @@ spring:
       hibernate.format_sql: true
 
 myapplication:
-  userservice: localhost:8090
+  userservice: 192.168.1.35:8090
