--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -6,5 +6,5 @@ spring:
       database: socialmedia
       username: bilgeadamuser
       password: '!bilgeadam'
-      host: localhost
+      host: 192.168.1.35
       port: 27010
