login.html is added.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'BilgeAdam_SocialMedia'
 include 'user-service'
 include 'auth-service'
+include 'web-service'
+include 'web-service'
 
