--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -1,15 +1,10 @@
 spring:
   cloud:
     config:
-      username: "administrator"
-      password: "Bilge123!!"
-      uri: "http://192.168.1.201:8888"
+      username: ${CONFIG_SECURITY_USERNAME}
+      password: ${CONFIG_SECURITY_PASSWORD}
+      uri: ${CONFIG_URI}
   config:
     import: "configserver:"
   application:
     name: auth-service
-  zipkin:
-    enable: true
-    base-url: http://34.116.235.46:9411/
-    service:
-      name: auth-server
