--- a/config-server/src/main/resources/services/web-service.yml
+++ b/config-server/src/main/resources/services/web-service.yml
@@ -1,12 +1,21 @@
 server:
-  port: 80
+  port: ${WEB_SERVICE_SERVER_PORT}
 
 spring:
-  security:
-    user:
-      name: admin
-      password: root
+  zipkin:
+    enabled: true
+    base-url: ${ZIPKIN_BASEURL}
+    service-name: web-service
 
 s3:
   accesskey: ${AWS_ACCESSKEY_S3}
   secretkey: ${AWS_SECRETKEY_S3}
+
+
+logging:
+  level:
+    root: warn
+    org.springframework.boot: info
+    com.bilgeadam: debug
+  file:
+    name: webservice.log
