--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,7 @@ out/
 ### VS Code ###
 .vscode/
 
-### BilgeAdamSocialMediaHtml ###
+### Folders ###
 BilgeAdamSocialMediaHtml/
+Kubernete/PROJECT/*
+
