--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -5,8 +5,9 @@ buildscript {
 }
 dependencies {
     implementation  libs.springDataJpa
-    implementation libs.postgresql
-    implementation libs.springCloudClientConfig
+    implementation  libs.postgresql
+    implementation  libs.springCloudClientConfig
+    implementation  libs.springAmqp
 //    implementation   libs.springSecurity
 
 }
