--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -27,6 +27,7 @@ ext{
           springCloudCircuitbreaker: "org.springframework.cloud:spring-cloud-circuitbreaker-resilience4j:$versions.springCircuitbreaker",
           springCloudCircuitbreakerReactor: "org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j:$versions.springCircuitbreaker",
           thymeleaf             : "org.springframework.boot:spring-boot-starter-thymeleaf:$versions.springBoot",
+          springAmqp            : "org.springframework.boot:spring-boot-starter-amqp:$versions.springBoot",
           postgresql            : "org.postgresql:postgresql:$versions.postgresql",
           lombok                : "org.projectlombok:lombok:$versions.lombok",
           openapi               : "org.springdoc:springdoc-openapi-ui:$versions.openapi",
