--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -26,8 +26,9 @@ ext{
           springCloudGateway    : "org.springframework.cloud:spring-cloud-starter-gateway:$versions.springCloud",
           springCloudCircuitbreaker: "org.springframework.cloud:spring-cloud-circuitbreaker-resilience4j:$versions.springCircuitbreaker",
           springCloudCircuitbreakerReactor: "org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j:$versions.springCircuitbreaker",
-          thymeleaf             : "org.springframework.boot:spring-boot-starter-thymeleaf:$versions.springBoot",
           springAmqp            : "org.springframework.boot:spring-boot-starter-amqp:$versions.springBoot",
+          springElasticSearch   : "org.springframework.boot:spring-boot-starter-data-elasticsearch:$versions.springBoot",
+          thymeleaf             : "org.springframework.boot:spring-boot-starter-thymeleaf:$versions.springBoot",
           postgresql            : "org.postgresql:postgresql:$versions.postgresql",
           lombok                : "org.projectlombok:lombok:$versions.lombok",
           openapi               : "org.springdoc:springdoc-openapi-ui:$versions.openapi",
