--- a/elastic-service/build.gradle
+++ b/elastic-service/build.gradle
@@ -3,9 +3,10 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:$versions.springBoot")
     }
 }
-
 dependencies {
-    implementation libs.springDataMongoDb
-    implementation libs.springCloudClientConfig
+    implementation  libs.springCloudClientConfig
     implementation  libs.springAmqp
+    implementation  libs.springElasticSearch
+//    implementation   libs.springSecurity
+
 }
