feat: Security is added to auth-service

--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation  libs.postgresql
     implementation  libs.springCloudClientConfig
     implementation  libs.springAmqp
-//    implementation   libs.springSecurity
+    implementation  libs.auth0Jwt
+    implementation  libs.springSecurity
 
 }
