--- a/config-server/src/main/resources/services/auth-service.yml
+++ b/config-server/src/main/resources/services/auth-service.yml
@@ -2,6 +2,9 @@ server:
   port: ${AUTH_SERVICE_PORT}
 
 spring:
+  redis:
+    host: ${HOST}
+    port: ${REDIS_PORT}
   rabbitmq:
     host: ${HOST}
     port: ${RABBIT_PORT}
