--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -31,6 +31,7 @@ ext{
           springCloudCircuitbreakerReactor: "org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j:$versions.springCircuitbreaker",
           springAmqp            : "org.springframework.boot:spring-boot-starter-amqp:$versions.springBoot",
           springElasticSearch   : "org.springframework.boot:spring-boot-starter-data-elasticsearch:$versions.springBoot",
+          springRedis           : "org.springframework.boot:spring-boot-starter-data-redis:$versions.springBoot",
           thymeleaf             : "org.springframework.boot:spring-boot-starter-thymeleaf:$versions.springBoot",
           postgresql            : "org.postgresql:postgresql:$versions.postgresql",
           lombok                : "org.projectlombok:lombok:$versions.lombok",
@@ -39,9 +40,9 @@ ext{
           mapstructProcessor    : "org.mapstruct:mapstruct-processor:$versions.mapstruct",
           awsS3                 : "com.amazonaws:aws-java-sdk-s3:$versions.aws",
           awsCloudFront         : "com.amazonaws:aws-java-sdk-cloudfront:$versions.aws",
-          springGraphql         : "com.graphql-java-kickstart:graphql-spring-boot-starter:$versions.springGraphql",
           springGraphiql        : "com.graphql-java-kickstart:graphiql-spring-boot-starter:$versions.springGraphiql",
+          springGraphql         : "com.graphql-java-kickstart:graphql-spring-boot-starter:$versions.springGraphql",
           javaToolGraphql       : "com.graphql-java-kickstart:graphql-java-tools:$versions.springGraphql",
-          auth0Jwt              : "com.auth0:java-jwt:$versions.auth0Jwt"
+          auth0Jwt              : "com.auth0:java-jwt:$versions.auth0Jwt",
     ]
 }
